unpackaged/main/default/objects/Fuel_Log__c/Fuel_Log__c.object-meta.xml
<CustomObject>
    <label>Fuel Log</label>
    <nameField>
        <displayFormat>FL-{00000}</displayFormat>
        <label>Driver Fuel Log</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fuel Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>