unpackaged/main/default/objects/Fuel_Log__c/fields/DEF_Gallons__c.field-meta.xml
<CustomField>
    <fullName>DEF_Gallons__c</fullName>
    <label>DEF Gallons</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>