unpackaged/main/default/objects/Fuel_Log__c/fields/Fuel_Gallone__c.field-meta.xml
<CustomField>
    <fullName>Fuel_Gallone__c</fullName>
    <label>Fuel Gallone</label>
    <precision>12</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>