unpackaged/main/default/objects/Fuel_Log__c/fields/Fuel_Per_Gallon_Cost__c.field-meta.xml
<CustomField>
    <fullName>Fuel_Per_Gallon_Cost__c</fullName>
    <label>Fuel Per Gallon Cost</label>
    <precision>9</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>