unpackaged/main/default/objects/Fuel_Log__c/fields/Miles_In__c.field-meta.xml
<CustomField>
    <fullName>Miles_In__c</fullName>
    <label>Miles In</label>
    <precision>10</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>