unpackaged/main/default/objects/Fuel_Log__c/fields/Station_Location__c.field-meta.xml
<CustomField>
    <fullName>Station_Location__c</fullName>
    <label>Station Location</label>
    <type>TextArea</type>
</CustomField>