unpackaged/main/default/objects/Fuel_Log__c/fields/Ticket_Number__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Number__c</fullName>
    <label>Ticket Number</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>