unpackaged/main/default/objects/Fuel_Log__c/fields/Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Vehicle__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Vehicle</label>
    <referenceTo>Vehicle__c</referenceTo>
    <relationshipLabel>Fuel Logs</relationshipLabel>
    <relationshipName>Fuel_Logs</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>